--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,3 @@
-<p>
-  welcome works!
-</p>
+<div class="WelcomeComponent-div">
+  <button type="button" (click)="switchPage()">Work Page</button>
+</div>
