add api-key.ts file

--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,3 +1,3 @@
-<p>
-  works works!
-</p>
+<div class="WorkComponent-div">
+  <button type="button" (click)="switchPage()">Welcome Page</button>
+</div>
