--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,10 @@
 <div class="WelcomeComponent-div">
   <button type="button" (click)="switchPage()">Work Page</button>
+
+  <div class="user" *ngFor="let user of Users | async">
+    <h2>{{user.name}}</h2>
+    <p>{{user.doc.Google}}</p>
+    <p>{{user.doc[0]}}</p>
+  </div>
+
 </div>
