--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -12,8 +12,8 @@
 
   <div class="user" *ngFor="let user of Users | async">
     <h2>{{user.name}}</h2>
-    <p>{{user.doc.Google}}</p>
-    <p>{{user.doc[0]}}</p>
+    <p>{{user.$key}}</p>
+    <p>{{user.doc}}</p>
   </div>
 
 </div>
